--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 								<!--------content ---------->
 								<div>
 									<h1 class=" text-2xl font-bold p-4">DEMO 1</h1>
-									<div>
+									<div class=" px-5 pb-5">
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -388,7 +388,7 @@
 								<!--------content ---------->
 								<div>
 									<h1 class=" text-2xl font-bold p-4">DEMO 2</h1>
-									<div>
+									<div class=" px-5 pb-5">
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -409,7 +409,7 @@
 								<!--------content ---------->
 								<div>
 									<h1 class=" text-2xl font-bold p-4">DEMO 3</h1>
-									<div>
+									<div class=" px-5 pb-5">
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -430,7 +430,7 @@
 								<!--------content ---------->
 								<div>
 									<h1 class=" text-2xl font-bold p-4">DEMO 4</h1>
-									<div>
+									<div  class=" px-5 pb-5">
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -451,7 +451,7 @@
 								<!--------content ---------->
 								<div>
 									<h1 class=" text-2xl font-bold p-4">DEMO 5</h1>
-									<div>
+									<div  class=" px-5 pb-5">
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -472,7 +472,7 @@
 								<!--------content ---------->
 								<div>
 									<h1 class=" text-2xl font-bold p-4">DEMO 6</h1>
-									<div>
+									<div  class=" px-5 pb-5">
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
