--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
 		<!-- Company Name -->
 		<title>NX DS</title>
 		<!-- Company Icon -->
-		<link rel="icon" href="images/logo.png">
+		<link rel="icon" href="images/NXDS-Favicon.png">
+		<!-- Google Font  -->
+		<link rel="apple-touch-icon" sizes="180x180" href="https://noahxavier.com/images/0/5470771/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://noahxavier.com/images/0/5470774/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://noahxavier.com/images/0/5470777/favicon-16x16.pngg">
+		<link rel="manifest" href="https://noahxavier.com/images/0/5470780/site.webmanifest">
+		<link rel="mask-icon" href="https://noahxavier.com/images/0/5470781/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="https://noahxavier.com/images/0/5470784/favicon.ico">
+		<meta name="apple-mobile-web-app-title" content="NX Design Studio">
+		<meta name="application-name" content="NX Design Studio">
+		<meta name="msapplication-TileColor" content="#2b5797">
+		<meta name="msapplication-config" content="https://noahxavier.com/images/0/5470813/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<!-- Google Font  -->
 
 		<!-- Tailwind-Css -->
@@ -97,7 +109,7 @@
 						<!---Logo---->
 						<div class=" md:mr-10">
 							<a href="index.html">
-								<img height="100%" width="100%" class="md:w-auto w-4/5 h-auto" src="images/logo.png" alt="Logo">
+								<img height="100%" width="295px" class="" src="images/logo.png" alt="Logo">
 							</a>
 						</div>
 					</div>
@@ -154,7 +166,7 @@
 										<img height="100%" width="100%" class="mx-auto w-auto h-auto" src="images/logo.png" alt="Logo">
 									</a>
 								</div>
-								<div class="space-x-6 text-xs font-semibold w-full" x-data=" {active :'active1'}">
+								<div class="space-x-6 text-xs font-semibold w-full text-center" x-data=" {active :'active1'}">
 									<ul class="w-full tracking-wider">
 										<li class=" duration-300 py-4 px-10">
 											<a class=" lg:text-lg text-sm text-white font-bold" href="#services">Services</a>
@@ -274,10 +286,10 @@
 						</div>
 						<!--002-->
 						<div class=" text-white py-8 flex justify-end">
-							<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/02.png);">
-								<p class=" font-semibold text-2xl">02</p>
-								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Design</h1>
-								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+							<div class=" bg-contain bg-right bg-no-repeat w-100" style=" background-image: url(images/home/02.png);">
+								<p class=" font-semibold text-2xl text-right">02</p>
+								<h1 class=" font-bold lg:text-4xl text-right text-3xl my-2">Design</h1>
+								<p class=" font-semibold lg:text-lg text-right text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
 							</div>
 						</div>
 						<!--003-->
@@ -289,8 +301,8 @@
 							</div>
 						</div>
 						<!--004-->
-						<div class=" text-white py-8 flex justify-end">
-							<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/04.png);">
+						<div class=" text-white py-8 flex justify-end text-right">
+							<div class=" bg-contain bg-no-repeat w-100 bg-right" style=" background-image: url(images/home/04.png);">
 								<p class=" font-semibold text-2xl">04</p>
 								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Development</h1>
 								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
@@ -305,8 +317,8 @@
 							</div>
 						</div>
 						<!--006-->
-						<div class=" text-white py-8 flex justify-end">
-							<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/06.png);">
+						<div class=" text-white py-8 flex justify-end text-right">
+							<div class=" bg-contain bg-no-repeat w-100 bg-right" style=" background-image: url(images/home/06.png);">
 								<p class=" font-semibold text-2xl">06</p>
 								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Launch</h1>
 								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
@@ -497,8 +509,15 @@
 								<span class="gradient-text duration-300">Let’s Talk!</span>
 							</button>
 							<!---->
-							<div>
-								<iframe  x-show="modal" src="https://form.questionscout.com/611046be390dbd3cf2d60386" frameborder="0" width="100%" height="100%" id="kfqwmodzfqsgko" class="qs-form" style="position: fixed; z-index: 2048; inset: 0px; border: 0px;"></iframe>
+							<div x-show="modal" class="fixed top-0 left-0 right-0 bottom-0 z-50 overflow-hidden">
+								<div class="absolute md:right-20 sm:right-10 right-5 sm:top-10 top-16">
+									<button class=" p-1 rounded-lg border border-white" @click="modal=false">
+										<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M6 18L18 6M6 6l12 12" />
+										</svg>
+									</button>
+								</div>
+								<iframe  src="https://form.questionscout.com/611046be390dbd3cf2d60386" frameborder="0" width="100%" height="100%" id="kfqwmodzfqsgko" class="qs-form w-full h-full" ></iframe>
 							</div>
 						</div>
 					</div>
@@ -539,7 +558,7 @@
 						<!---Logo---->
 						<div class=" md:mr-10">
 							<a href="index.html">
-								<img height="100%" width="100%" class="md:w-auto w-3/5 h-auto" src="images/logo1.png" alt="Logo">
+								<img height="100%" width="100%" class="" src="images/logo.png" alt="Logo">
 							</a>
 						</div>
 						<p class=" md:lg:text-lg text-sm text-sm font-semibold mt-5 lg:w-full md:w-1/2 w-full">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est vestibulum quam ipsum in volutpat orci parturient. </p>
@@ -553,15 +572,15 @@
 								<li class=" font-semibold mb-3 lg:text-xl text-lg">Quick Links</li>
 								<!---->
 								<li>
-									<a class=" font-medium mb-2"href="#services">Services</a>
+									<a class=" font-medium mb-2 hover:text-gray-300 duration-100"href="#services">Services</a>
 								</li>
 								<!---->
 								<li>
-									<a class=" font-medium mb-2" href="#our-work">Our Work</a>
+									<a class=" font-medium mb-2 hover:text-gray-300 duration-100" href="#our-work">Our Work</a>
 								</li>
 								<!---->
 								<li>
-									<a class=" font-medium mb-2" href="#our-story">Our Story</a>
+									<a class=" font-medium mb-2 hover:text-gray-300 duration-100" href="#our-story">Our Story</a>
 								</li>
 							</ul>
 						</div>
@@ -572,11 +591,11 @@
 								<li class=" font-semibold mb-3 lg:text-xl text-lg">Contact Us</li>
 								<!---->
 								<li>
-									<a class=" font-medium mb-2" href="mailto:sample@email.com">sample@email.com</a>
+									<a class=" font-medium mb-2 hover:text-gray-300 duration-100" href="mailto:sample@email.com">sample@email.com</a>
 								</li>
 								<!---->
 								<li>
-									<a class=" font-medium mb-2" href="tel:+2085550112">(208) 555-0112</a>
+									<a class=" font-medium mb-2 hover:text-gray-300 duration-100" href="tel:+2085550112">(208) 555-0112</a>
 								</li>
 							</ul>
 						</div>
