--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<!---Logo---->
 						<div class=" md:mr-10">
 							<a href="index.html">
-								<img height="100%" width="295px" class="" src="images/logo.png" alt="Logo">
+								<img height="100%" width="295px" class="filter drop-shadow-2xl" src="images/logo.png" alt="Logo">
 							</a>
 						</div>
 					</div>
@@ -120,15 +120,15 @@
 						<ul class=" lg:flex hidden items-center space-x-8">
 							<!---->
 							<li>
-								<a class=" lg:text-lg text-sm text-white font-bold" href="#services">Services</a>
+								<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#services">Services</a>
 							</li>
 							<!---->
 							<li>
-								<a class=" lg:text-lg text-sm text-white font-bold" href="#our-work">Our Work</a>
+								<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#our-work">Our Work</a>
 							</li>
 							<!---->
 							<li>
-								<a class=" lg:text-lg text-sm text-white font-bold" href="#our-story">Our Story</a>
+								<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#our-story">Our Story</a>
 							</li>
 							<!---->
 							<li>
@@ -171,13 +171,13 @@
 								<div class="space-x-6 text-xs font-semibold w-full text-center" x-data=" {active :'active1'}">
 									<ul class="w-full tracking-wider">
 										<li class=" duration-300 py-4 px-10">
-											<a class=" lg:text-lg text-sm text-white font-bold" href="#services">Services</a>
+											<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#services">Services</a>
 										</li>
 										<li class=" duration-300 hover:tracking-widest py-4 px-10 relative">
-											<a class=" lg:text-lg text-sm text-white font-bold" href="#our-work">Our Work</a>
+											<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#our-work">Our Work</a>
 										</li>
 										<li class=" duration-300 hover:tracking-widest py-4 px-10 relative">
-											<a class=" lg:text-lg text-sm text-white font-bold" href="#our-story">Our Story</a>
+											<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#our-story">Our Story</a>
 										</li>
 										<div class=" px-4 py-2 mt-5">
 											<a class=" lg:text-lg text-sm font-bold h-12 w-full block flex items-center justify-center px-6 bg-white rounded-lg" href="#Get-Started">
@@ -560,7 +560,7 @@
 						<!---Logo---->
 						<div class=" md:mr-10">
 							<a href="index.html">
-								<img height="100%" width="100%" class="" src="images/logo.png" alt="Logo">
+								<img height="100%" width="100%" class="filter drop-shadow-2xl" src="images/logo.png" alt="Logo">
 							</a>
 						</div>
 						<p class=" md:lg:text-lg text-sm text-sm font-semibold mt-5 lg:w-full md:w-1/2 w-full">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est vestibulum quam ipsum in volutpat orci parturient. </p>
