--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 							</li>
 							<!---->
 							<li>
-								<a class=" lg:text-lg text-sm font-bold h-12 w-44 block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
-									<span class="gradient-text duration-300">Get Started</span>
+								<a class=" lg:text-lg text-sm font-bold h-12 w-52 block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
+									<span class="gradient-text duration-300 uppercase">Get Started</span>
 								</a>
 							</li>
 						</ul>
@@ -181,7 +181,7 @@
 										</li>
 										<div class=" px-4 py-2 mt-5">
 											<a class=" lg:text-lg text-sm font-bold h-12 w-full block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
-												<span class="gradient-text duration-300">Get Started</span>
+												<span class="gradient-text duration-300 uppercase">Get Started</span>
 											</a>
 										</div>
 									</ul>
@@ -369,7 +369,7 @@
 						<!--------modal 001---------->
 						<div x-show.transition="tab === 'tab1'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
 								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
 									<span class="">
