--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			<section id="services">
 				<div class="lg:px-20 xl:px-32 md:px-16 sm:px-10 px-7 py-20 max-w-1240 mx-auto">
 					<!--Heading-->
-					<div class=" text-center pb-16 lg:pt-20">
+					<div class=" text-center pb-16 lg:pt-10">
 						<h1 class="gradient-text lg:text-4xl text-3xl font-bold inline-block">What We Offer</h1>
 					</div>
 					<!--grid-->
@@ -334,7 +334,7 @@
 				<div x-data="{tab : 'tab'}" class="lg:px-20 xl:px-0 md:px-16 sm:px-10 px-7 py-20 max-w-1240 mx-auto">
 					<!--Heading-->
 					<div class=" text-center pb-16 lg:w-3/5 md:4/5 w-full mx-auto xl:px-10">
-						<h1 class="gradient-text lg:text-4xl text-3xl font-bold inline-block lg:pt-20">Our Work</h1>
+						<h1 class="gradient-text lg:text-4xl text-3xl font-bold inline-block lg:pt-10">Our Work</h1>
 						<p class=" font-semibold lg:text-lg text-sm mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium lectus sed a tincidunt et viverra. Risus eget id arcu enim. Fermentum lobortis sem facilisi adipiscing tincidunt morbi nulla quis.</p>
 					</div>
 					<!--grid-->
@@ -371,7 +371,7 @@
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
 							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -392,7 +392,7 @@
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
 							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -413,7 +413,7 @@
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
 							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -434,7 +434,7 @@
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
 							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -455,7 +455,7 @@
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
 							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -476,7 +476,7 @@
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
 							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-red-500  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
