--- a/index.html
+++ b/index.html
@@ -171,16 +171,16 @@
 								<div class="space-x-6 text-xs font-semibold w-full text-center" x-data=" {active :'active1'}">
 									<ul class="w-full tracking-wider">
 										<li class=" duration-300 py-4 px-10">
-											<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#services">Services</a>
+											<a class="  text-lg text-white font-bold hover:text-gray-300 duration-100" href="#services">Services</a>
 										</li>
 										<li class=" duration-300 hover:tracking-widest py-4 px-10 relative">
-											<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#our-work">Our Work</a>
+											<a class="  text-lg text-white font-bold hover:text-gray-300 duration-100" href="#our-work">Our Work</a>
 										</li>
 										<li class=" duration-300 hover:tracking-widest py-4 px-10 relative">
-											<a class=" lg:text-lg text-sm text-white font-bold hover:text-gray-300 duration-100" href="#our-story">Our Story</a>
+											<a class="  text-lg text-white font-bold hover:text-gray-300 duration-100" href="#our-story">Our Story</a>
 										</li>
 										<div class=" px-4 py-2 mt-5">
-											<a class=" lg:text-lg text-sm font-bold h-12 w-full block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
+											<a class="  text-lg font-bold h-12 w-full block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
 												<span class="gradient-text duration-300 uppercase">Get Started</span>
 											</a>
 										</div>
@@ -526,7 +526,7 @@
 				</div>
 			</section>
 			<!-----=====Sec 006=======----->
-			<section id="our-story">
+			<section class="pt-10" id="our-story">
 				<div class="lg:px-20 xl:px-0 md:px-16 sm:px-10 px-7 py-20 max-w-1240 mx-auto">
 					
 					<!--grid-->
