--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
 			#sec-3{
 				min-height:1825px;
 			}
+			.drop-shadow-2xl{
+				filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+			}
+			.drop-shadow-2xl-upper{
+				filter: drop-shadow(-0.35rem -0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+			}
 			@media (min-width:1300px){
 				.max-w-1240{
 				max-width: 1240px;
@@ -101,7 +107,7 @@
 	<body x-data="{sticky: true}">
 		<!-- ==Header Section == -->
 		<header @scroll.window="sticky= (window.pageYOffset > 300) ? false :true"
-		:class="{'bg-radial-gradient duration-500 sticky shadow-2xl' : !sticky , 'absolute' : sticky}"
+		:class="{'bg-radial-gradient duration-500 sticky drop-shadow-2xl' : !sticky , 'absolute' : sticky}"
 		class="right-0 top-0 left-0 z-50">
 			<!----Main nav--->
 			<nav x-data="{humberger: false}" class="lg:px-20 xl:px-0 md:px-16 sm:px-10 px-7 py-4 max-w-1240 mx-auto">
@@ -195,7 +201,7 @@
 		<!-- ==Main Section == -->
 		<main>
 			<!-----=====Sec 001=======----->
-			<section class=" bg-center bg-cover bg-no-repeat" style=" background-image: url(images/bg/bg-1.jpg);">
+			<section class=" bg-center bg-cover bg-no-repeat drop-shadow-2xl" style=" background-image: url(images/bg/bg-1.png);">
 				<!------->
 				<div class="h-full flex items-center justify-center xl:pb-16 max-w-1240 mx-auto" id="sec-1">
 					<div class="lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white">
@@ -207,6 +213,8 @@
 						</a>
 					</div>
 				</div>
+				<!---
+				<svg height="100%" width="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><path d="M 0,400 C 0,400 0,200 0,200 C 151.86666666666667,215.46666666666667 303.73333333333335,230.93333333333334 480,220 C 656.2666666666667,209.06666666666666 856.9333333333334,171.73333333333332 1021,164 C 1185.0666666666666,156.26666666666668 1312.5333333333333,178.13333333333333 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="currentColor" class="transition-all duration-300 ease-in-out delay-150" transform="rotate(-180 720 200)"></path></svg>-->
 			</section>
 			<!-----=====Sec 002=======----->
 			<section id="services">
@@ -550,7 +558,7 @@
 			</section>
 		</main>
 		<!-- ==Footer Section == -->
-		<footer class=" bg-cover bg-center bg-no-repeat relative" style=" background-image: url(images/bg/bg-4.jpg);">
+		<footer class=" bg-cover bg-center bg-no-repeat relative drop-shadow-2xl-upper" style=" background-image: url(images/bg/bg-4.png);">
 			<!-------->
 			<div class="lg:px-20 xl:px-0 md:px-16 sm:px-10 px-7 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat flex items-end" id="footer">
 				<!------->
