--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 			.drop-shadow-2xl{
 				filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 			}
+			.drop-shadow-3xl{
+				    filter: drop-shadow(0.75rem 0.75rem 0.7rem rgba(0, 0, 0, 0.5));
+			}
 			.drop-shadow-2xl-upper{
 				filter: drop-shadow(-0.35rem -0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 			}
@@ -226,7 +229,7 @@
 					<!--grid-->
 					<div class=" grid sm:grid-cols-2 grid-cols-1 lg:gap-20 gap-10 bg-white">
 						<!--001-->
-						<div class=" lg:px-16 px-8 lg:py-24 py-16 bg-radial-gradient rounded-lg shadow-2xl">
+						<div class=" lg:px-16 px-8 lg:py-24 py-16 bg-radial-gradient rounded-lg drop-shadow-3xl">
 							<div class=" text-center text-white">
 								<!---->
 								<img height="100%" width="100%" class="mx-auto w-auto h-auto" src="images/home/web.svg" alt="//">
@@ -236,7 +239,7 @@
 							</div>
 						</div>
 						<!--002-->
-						<div class=" lg:px-16 px-8 lg:py-24 py-16 bg-radial-gradient rounded-lg shadow-2xl">
+						<div class=" lg:px-16 px-8 lg:py-24 py-16 bg-radial-gradient rounded-lg drop-shadow-3xl">
 							<div class=" text-center text-white">
 								<!---->
 								<img height="100%" width="100%" class="mx-auto w-auto h-auto" src="images/home/lp.svg" alt="//">
@@ -246,7 +249,7 @@
 							</div>
 						</div>
 						<!--003-->
-						<div class=" lg:px-16 px-8 lg:py-20 py-16 bg-radial-gradient rounded-lg sm:col-span-2 shadow-2xl">
+						<div class=" lg:px-16 px-8 lg:py-20 py-16 bg-radial-gradient rounded-lg sm:col-span-2 drop-shadow-3xl">
 							<div class="flex sm:flex-row flex-col items-center justify-center md text-white">
 								<!---->
 								<div>
