--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 		<!-- ==Main Section == -->
 		<main>
 			<!-----=====Sec 001=======----->
-			<section class=" bg-center bg-cover bg-no-repeat drop-shadow-2xl" style=" background-image: url(images/bg/bg-1.png);">
+			<section class=" bg-center bg-cover bg-no-repeat drop-shadow-2xl" style=" background-image: url(images/bg/Hero-BG.svg);">
 				<!------->
 				<div class="h-full flex items-center justify-center xl:pb-16 max-w-1240 mx-auto" id="sec-1">
 					<div class="lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white">
@@ -278,7 +278,7 @@
 				</div>
 			</section>
 			<!-----=====Sec 003=======----->
-			<section class="lg:px-20 xl:px-48 md:px-16 sm:px-10 px-7 my-20 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat" style=" background-image: url(images/bg/bg-2.jpg);">
+			<section class="lg:px-20 xl:px-48 md:px-16 sm:px-10 px-7 my-20 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat" style=" background-image: url(images/bg/How-We-Work-BG.svg);">
 				<!------->
 				<div class="py-20 lg:pt-40 flex icon-erase" id="sec-3">
 					<div>
@@ -380,9 +380,9 @@
 						<!--------modal 001---------->
 						<div x-show.transition="tab === 'tab1'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="md:mt-20  bg-white p-5 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  -top-8 right-2">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -391,8 +391,7 @@
 								</div>
 								<!--------content ---------->
 								<div>
-									<h1 class=" text-2xl font-bold p-4">DEMO 1</h1>
-									<div class=" px-7 pb-5">
+									<div >
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -401,9 +400,9 @@
 						<!--------modal 002---------->
 						<div x-show.transition="tab === 'tab2'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="md:mt-20  bg-white p-5 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  -top-8 right-2">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -412,8 +411,7 @@
 								</div>
 								<!--------content ---------->
 								<div>
-									<h1 class=" text-2xl font-bold p-4">DEMO 2</h1>
-									<div class=" px-7 pb-5">
+									<div >
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -422,9 +420,9 @@
 						<!--------modal 003---------->
 						<div x-show.transition="tab === 'tab3'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="md:mt-20  bg-white p-5 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  -top-8 right-2">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -433,8 +431,7 @@
 								</div>
 								<!--------content ---------->
 								<div>
-									<h1 class=" text-2xl font-bold p-4">DEMO 3</h1>
-									<div class=" px-7 pb-5">
+									<div >
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -443,9 +440,9 @@
 						<!--------modal 004---------->
 						<div x-show.transition="tab === 'tab4'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="md:mt-20  bg-white p-5 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  -top-8 right-2">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -454,8 +451,7 @@
 								</div>
 								<!--------content ---------->
 								<div>
-									<h1 class=" text-2xl font-bold p-4">DEMO 4</h1>
-									<div  class=" px-7 pb-5">
+									<div  >
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -464,9 +460,9 @@
 						<!--------modal 005---------->
 						<div x-show.transition="tab === 'tab5'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="md:mt-20  bg-white p-5 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  -top-8 right-2">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -475,8 +471,7 @@
 								</div>
 								<!--------content ---------->
 								<div>
-									<h1 class=" text-2xl font-bold p-4">DEMO 5</h1>
-									<div  class=" px-7 pb-5">
+									<div  >
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -485,9 +480,9 @@
 						<!--------modal 006---------->
 						<div x-show.transition="tab === 'tab6'"
 						class="z-50  bg-black bg-opacity-70 md:overflow-hidden overflow-y-auto fixed left-0 top-0 w-full h-full flex justify-center items-center">
-							<div @click.away="modal=false" class="bg-white md:px-10 md:pb-10 rounded  relative w-11/12 md:w-4/5 xl:w-3/5">
+							<div @click.away="modal=false" class="md:mt-20  bg-white p-5 rounded-xl  relative w-11/12 md:w-4/5 xl:w-3/5">
 								<!--------close button---------->
-								<div @click="tab=false" class=" absolute text-blue-600  top-4 right-4">
+								<div @click="tab=false" class=" absolute text-blue-600  -top-8 right-2">
 									<span class="">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -496,8 +491,7 @@
 								</div>
 								<!--------content ---------->
 								<div>
-									<h1 class=" text-2xl font-bold p-4">DEMO 6</h1>
-									<div  class=" px-7 pb-5">
+									<div  >
 										<img class="w-full h-full" src="images/home/07.jpg" alt="">
 									</div>
 								</div>
@@ -507,7 +501,7 @@
 				</div>
 			</section>
 			<!-----=====Sec 005=======----->
-			<section id="Get-Started" class="lg:px-20 xl:px-32 md:px-16 sm:px-10 px-7 lg:my-40 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat" style=" background-image: url(images/bg/bg-3.jpg);">
+			<section id="Get-Started" class="lg:px-20 xl:px-32 md:px-16 sm:px-10 px-7 lg:my-40 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat" style=" background-image: url(images/bg/Lets-Get-Started-BG.svg);">
 				<!------->
 				<div class="flex items-center justify-center" style="min-height: 562px;">
 					<div class=" lg:w-3/4 md:w-10/12 w-full text-center text-white">
@@ -561,7 +555,7 @@
 			</section>
 		</main>
 		<!-- ==Footer Section == -->
-		<footer class=" bg-cover bg-center bg-no-repeat relative drop-shadow-2xl-upper" style=" background-image: url(images/bg/bg-4.png);">
+		<footer class=" bg-cover bg-center bg-no-repeat relative drop-shadow-2xl-upper" style=" background-image: url(images/bg/Footer-BG.svg);">
 			<!-------->
 			<div class="lg:px-20 xl:px-0 md:px-16 sm:px-10 px-7 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat flex items-end" id="footer">
 				<!------->
